# rogue-talk

./: .gitignore  README.md  flake.nix  level.txt  pyproject.toml
data/users/pinpox/: pub  state.json
examples/: piano_bot.py
levels/: cave.tar  main.tar
levels/cave/: level.json  level.txt  tiles.json
levels/main/: level.json  level.txt  tiles.json
rogue_talk/audio/: backend.py  backend_pulse.py  mixer.py  opus_codec.py  sound_loader.py  webrtc_tracks.py
rogue_talk/bot/: client.py
rogue_talk/client/: audio_capture.py  audio_playback.py  game_client.py  identity.py  input_handler.py  jitter_buffer.py  level.py  level_pack.py  main.py  stream_player.py  terminal_ui.py  tile_sound_player.py
rogue_talk/common/: constants.py  crypto.py  protocol.py  tiles.json  tiles.py
rogue_talk/server/: audio_router.py  game_server.py  level.py  main.py  player.py  storage.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_audio_routing.py  test_protocol_roundtrip.py
tests/unit/: __init__.py
tests/unit/bot/: __init__.py  test_pathfinding.py
tests/unit/client/: __init__.py  test_jitter_buffer.py  test_tile_sound_player.py
tests/unit/common/: __init__.py  test_crypto.py  test_protocol.py  test_tiles.py
tests/unit/server/: __init__.py  test_audio_router.py  test_level.py  test_level_validation.py
