[project]
name = "rogue-talk"
version = "0.1.0"
description = "Proximity-based voice chat roguelike"
requires-python = ">=3.11"
dependencies = [
    "blessed",
    "sounddevice",
    "soundfile",
    "opuslib",
    "numpy",
    "cryptography",
]

[project.scripts]
rogue-talk-server = "rogue_talk.server.main:main"
rogue-talk-client = "rogue_talk.client.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rogue_talk*"]

[tool.setuptools.package-data]
"rogue_talk.common" = ["*.json"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["opuslib", "sounddevice", "soundfile", "blessed", "blessed.keyboard", "cryptography", "cryptography.*"]
ignore_missing_imports = true
