[project]
name = "rogue-talk"
version = "0.1.0"
description = "Proximity-based voice chat roguelike"
requires-python = ">=3.11"
dependencies = [
    "blessed",
    "soundfile",
    "opuslib_next",
    "numpy",
    "cryptography",
    "aiortc",
    "aiohttp",
]

[project.scripts]
rogue-talk-server = "rogue_talk.server.main:main"
rogue-talk-client = "rogue_talk.client.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rogue_talk*"]

[tool.setuptools.package-data]
"rogue_talk.common" = ["*.json"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["opuslib_next", "opuslib_next.*", "soundfile", "blessed", "blessed.keyboard", "cryptography", "cryptography.*", "aiortc", "aiortc.*", "av", "av.*", "aiohttp", "aiohttp.*"]
ignore_missing_imports = true
