[project]
name = "rogue-talk"
version = "0.1.0"
description = "Proximity-based voice chat roguelike"
requires-python = ">=3.11"
dependencies = [
    "av",
    "blessed",
    "soundfile",
    "numpy",
    "cryptography",
    "livekit-api",
    "livekit",
    "aiohttp",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
]

[project.scripts]
rogue-talk-server = "rogue_talk.server.main:main"
rogue-talk-client = "rogue_talk.client.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rogue_talk*"]

[tool.setuptools.package-data]
"rogue_talk.common" = ["*.json"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["soundfile", "blessed", "blessed.keyboard", "cryptography", "cryptography.*", "livekit", "livekit.*", "livekit_api", "livekit_api.*", "av", "av.*", "aiohttp", "aiohttp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["rogue_talk"]
branch = true
omit = ["*/main.py", "*/backend_pulse.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
